--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
    <title>Calculator</title>
    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
    <div class="calc__wrapp">
       <p class="calc__text">Calculator</p>
@@ -17,10 +19,10 @@
                <div class="calc__now">0</div>
             </div>
             <div class="calc__keys">
-               <button class="keyPer"> </button>
-               <button class="keySqr"> </button>
+               <button class="keyPer">%</button>
+               <button class="keySqr">X<sup>2</sup></button>
                <button class="keyClean">C</button>
-               <button class="keyDelete"><img  class="keyDelete" src="delete.png" alt="#"></button>
+               <button class="keyDelete"><img class="keyDelete" src="delete.png" alt="#"></button>
 
                <button class="key7">7</button>
                <button class="key8">8</button>
@@ -44,4 +46,5 @@
    </div>
    <script src="script.js"></script>
 </body>
+
 </html>
